--- a/clientt/package.json
+++ b/clientt/package.json
@@ -16,10 +16,12 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.15.6",
+    "@reduxjs/toolkit": "^2.1.0",
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
