--- a/clientt/package.json
+++ b/clientt/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.15.6",
     "@reduxjs/toolkit": "^2.1.0",
+    "axios": "^1.6.7",
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
